      (patch by Toshi Nagata)
    - implemented instruments database
    - added support for escape sequences to the instruments database
    - added highly experimental support for on-the-fly instrument editing
      within the sampler's process (by using instrument editor plugins),
      you'll notice the new "Registered instrument editors:" message on
      startup, added a new LSCP command "EDIT INSTRUMENT <sampler-channel>"
      to spawn a matching instrument editor for the instrument on the
      given sampler channel, the plugin path can be overridden at compile
      time with ./configure --enable-plugin-dir=/some/dir
    - added experimental code for synchronizing instrument editors hosted
      in the sampler's process to safely edit instruments while playing
      without a crash (hopefully) by either suspending single regions
      wherever possible or if unavoidable whole engine(s)
    - fixed several issues in fundamental "Thread" class: set scheduling
      policy and priority on thread level, set a minimum stack size for
      thread (TODO: a reasonable value yet to be tested), bugfix: non-RT
      threads simply inherited properties of starting thread instead of
      setting their own policy and priority
    - minor fix in our automatic stack trace mechanism on crashes, the
      main process did not wait for the stack trace process to finish
      its output
    - fixed some minor memory leaks
    - reenabled assembly features support, at the moment only for
      enabling a fast denormal FPU mode (x86 platforms supporting SSE2)
    - minor assembly fix in x86 features detection (don't use the PIC
      register, to avoid relocations in the text segment at runtime)

  * MIDI driver:
    - dispatch bank select (MSB and LSB) messages

  * audio driver:
    - the ALSA audio output driver parameters now reflect the correct
      parameter value ranges for the respective selected sound card
      (patch by Till Wimmer, a bit fixed and extended)
