@@ -47,7 +47,8 @@ Version CVS HEAD (?)
     - added highly experimental support for on-the-fly instrument editing
       within the sampler's process (by using instrument editor plugins),
       you'll notice the new "Registered instrument editors:" message on
-      startup, added a new LSCP command "EDIT INSTRUMENT <sampler-channel>"
+      startup, added a new LSCP command:
+      "EDIT CHANNEL INSTRUMENT <sampler-channel>"
       to spawn a matching instrument editor for the instrument on the
       given sampler channel, the plugin path can be overridden at compile
       time with ./configure --enable-plugin-dir=/some/dir
